# DeepFaceLab

./: .gitignore  Dockerfile  pyproject.toml  requirements-cuda.txt  requirements-flu.txt
core/imagelib/: warp.py
deepfacelab/: config.py  main.py
deepfacelab/core/: cv2ex.py  pathex.py  randomex.py  structex.py
deepfacelab/core/imagelib/: __init__.py  color_transfer.py  common.py  seg_ie_polys.py  warp.py
deepfacelab/core/joblib/: __init__.py  subprocess_generator.py  subprocessor_base.py  this_thread_generator.py
deepfacelab/core/leras/: nn.py  ops.py
deepfacelab/core/leras/archis/: base.py  deep_fake_archi.py
deepfacelab/core/leras/layers/: base.py  conv2d.py  conv2d_transpose.py  dense.py  saveable.py
deepfacelab/core/leras/models/: base.py  code_discriminator.py  patch_discriminator.py
deepfacelab/core/leras/optimizers/: ada_belief.py  base.py  rms_prop.py
deepfacelab/core/mplib/: __init__.py  mp_shared_list.py
deepfacelab/dflimg/: dflimg.py  dfljpg.py
deepfacelab/facelib/: __init__.py  face_type.py  landmarks_processor.py
deepfacelab/mainscripts/: trainer.py
deepfacelab/models/: base.py  saehd.py
deepfacelab/samplelib/: packed_faceset.py  sample.py  sample_generator_base.py  sample_generator_face.py  sample_loader.py  sample_processor.py
