[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfacelab"
description = ""
version = "0.1.0"
authors = [
    { name = "aubustou", email = "survivalfr@yahoo.fr" }
]
dependencies = [
"tensorflow[and-cuda]"
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "mypy",
    "ruff",
    "black",
    "bandit",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
]

[project.scripts]
deepfacelab = "deepfacelab.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'

[tool.mypy]
disable_error_code = ["arg-type","import-untyped"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "version {new_version}"
allow_dirty = true
commit = true
message = "Bump to {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[tool.pytest.ini_options]
markers = ["performance"]

